[package]
name = "proc_macro_roids"
version = "0.7.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Traits and functions to make writing proc macros more ergonomic."
repository = "https://github.com/azriel91/proc_macro_roids"
documentation = "https://docs.rs/proc_macro_roids/"
readme = "README.md"
keywords = ["proc_macro", "macros"]
license = "MIT OR Apache-2.0"

[dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["extra-traits", "visit"] }

[badges]
appveyor = { repository = "azriel91/proc_macro_roids" }
travis-ci = { repository = "azriel91/proc_macro_roids" }
codecov = { repository = "azriel91/proc_macro_roids" }
